v5 change the way to rank

--- a/industryRL_v4/industryRL_v4.ipynb
+++ b/industryRL_v4/industryRL_v4.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "預測出前五高可能產業，沒有經過股票篩選，feature目前用第一版"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
